--- a/package.json
+++ b/package.json
@@ -2,29 +2,25 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.0",
-    "css-loader": "^5.0.1",
+    "chokidar": "^3.5.3",
     "electron": "^22.1.0",
     "eslint": "^8.15.0",
     "pdfjs-dist": "^2.5.207",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.0.5",
-    "webpack": "^5.4.0",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "^4.2.0"
+    "typescript": "^4.0.5"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "node esconfig.js",
     "lint": "eslint src/**.ts",
-    "serve": "node server/main.js"
+    "serve": "node server/main.js",
+    "esbuild-watch": "node esconfig.js development watch",
+    "electron": "electron ./mainElectron.js"
   },
   "dependencies": {
     "@types/color": "*",
-    "@types/jspdf": "*",
     "@types/lz-string": "*",
-    "@types/pdfjs-dist": "*",
     "color": "*",
+    "esbuild": "^0.17.10",
     "html2canvas": "*",
     "jspdf": "*",
     "lz-string": "*",
